z-index fix the  title  and wave

--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ align-items: center;
  }
  #both_wave{
 position: relative;
-
+z-index: -10;
  }
 
  #highlights{
@@ -225,6 +225,7 @@ color: black;
 #features{
   height: 1000px;
   background-color: #C57B57; 
+ 
 }
 .cakes-container{
   display: flex;
@@ -249,7 +250,7 @@ color: black;
 
 }
 
- .cake__img:hover{
+ .cake:hover .cake__img{
   transform: scale(1.3);
 }
 
